--- a/apps/rubricon/ui/src/styles/globals.css
+++ b/apps/rubricon/ui/src/styles/globals.css
@@ -4,6 +4,7 @@
   --background: #ffffff;
   --foreground: #171717;
   --primary: #F76902;
+  --light-gray: #D0D3D4;
 }
 
 @theme inline {
@@ -12,6 +13,7 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --color-primary: var(--primary);
+  --color-light-gray: var(--light-gray);
 }
 
 /* @media (prefers-color-scheme: dark) {
